<resources>
    <string name="app_name">Story App</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="name">Nama</string>
    <string name="description">Description</string>
    <string name="date">tanggal</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="no_account">Don’t have an account?</string>
    <string name="have_account">Already have an account?</string>

    <string name="add_button">Tambah</string>

    <string name="menu_logout">Logout</string>
    <string name="maps">Maps</string>

    <string name="preview">Image Preview</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>

    <string name="enter_email">Masukkan email anda</string>
    <string name="enter_name">Masukkan nama anda</string>
    <string name="enter_password">Masukkan password anda</string>
    <string name="enter_confirm">Masukkan password anda kembali</string>

    <string name="stories">Stories</string>
    <string name="detail_story">Detail Story</string>

    <string name="add_story">Add Story</string>
    <string name="location">Bagikan Lokasi</string>

    <string name="retry">Retry</string>
</resources>