<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.add.AddStoryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Story"
        app:titleTextColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_photo"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/preview" />

    <Button
        android:id="@+id/btn_camera"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/camera"
        app:layout_constraintBottom_toTopOf="@id/et_description"
        app:layout_constraintEnd_toStartOf="@id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_photo" />

    <Button
        android:id="@+id/btn_gallery"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        app:layout_constraintTop_toTopOf="@id/btn_camera" />

    <EditText
        android:id="@+id/et_description"
        android:alpha="0"
        tools:alpha="1"
        android:inputType="textMultiLine"
        android:layout_margin="20dp"
        android:hint="@string/description"
        android:gravity="start"
        android:padding="10dp"
        android:background="@drawable/border_custom"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_gallery"/>

    <Button
        android:id="@+id/btn_upload"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>