<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.detail.DetailStoryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Story"
        app:titleTextColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_photo"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:srcCompat="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/preview" />

    <TextView
        android:id="@+id/tv_date"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:transitionName="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_photo"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/tv_name"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_desc"
        android:alpha="0"
        tools:alpha="1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/poppins_regular"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:transitionName="description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="@string/description" />

</androidx.constraintlayout.widget.ConstraintLayout>